GNOME Bugzilla – Bug 771566
Calendar entry added twice If an event is added to non default calendar
Last modified: 2017-04-17 18:20:40 UTC
When I add an event to a calendar with non-English name, the event is added twice. One to the default Calendar, and one the current selected one. How to reproduce: 1. Add some calendar with non-English name. eg: നല്ലത് 2. Now Add Some event: In month view click on some cell -> Click 'Edit Details' 3. Select the newly added calendar from the list. 4. Give some name -> click 'Done' Result: The event is added twice. One to the default calendar, and other to the Selected calendar. Expected result: The event should be added only once, and to the selected calendar.
This is just the same for english calendars. So you can remove step 1.
(In reply to Marinus Schraal from comment #1) > This is just the same for english calendars. So you can remove step 1. Hm.. Yeah. Thanks for pointing that out.
Created attachment 340489 [details] [review] edit-dialog: check if event is new the right way Checking if a new event is already having a source succeeds for some reason (which should actually fail). But thankfully we already have an event_is_new gboolean flag. Check the status of that flag and add or update the event.
Thanks for the patch! Attachment 340489 [details] pushed as 6cf5c03 - edit-dialog: check if event is new the right way
*** Bug 774948 has been marked as a duplicate of this bug. ***